--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,5 @@
 == Description
-Tux dresses up sinatra for interactive use. Use it to interact with your helpers, view rendering and
+Tux dresses up sinatra in a shell. Use it to interact with your helpers, view rendering and
 your app's response objects. Tux also gives you commands to view your app's routes and settings.
 
 == Install
@@ -9,9 +9,16 @@ Install the gem with:
 
 == Usage
 
+Start with:
+
+    $ tux
+
+If your app's config file isn't config.ru, specify with -c
+
+    $ tux -c app.ru
+
 To interact with your helpers:
 
-    $ tux.uri
     >> app.my_helper_method
     ...
 
@@ -27,7 +34,7 @@ methods:
     => {"Content-Type"=>"text/html"}
 
 For the above to work, tux sets up default empty request and response objects. To try the helpers
-with your own requests and responses:
+with custom requests and responses:
 
     >> app.request = Sinatra::Request.new({})
     >> app.response = Sinatra::Response.new
@@ -37,9 +44,34 @@ To interact with your views:
     >> app.erb :my_template
     => 'template rendered'
 
+    # also
+    >> app.haml
+    >> app.markdown
+    ...
+
+Tux let's you you make requests and interact with rack response objects thanks to
+{rack-test}[https://github.com/brynary/rack-test]:
+
+    >> get '/'
+    => #<Rack::MockResponse:0x13d452c @headers={"Content-Type"=>"text/html;charset=utf-8",
+    "Content-Length"=>"4"}, @errors="127.0.0.1 - - [05/Apr/2011 02:22:27] \"GET / \" 200 4
+    0.0015\n", @status=200, @original_headers={"Content-Type"=>"text/html;charset=utf-8",
+    "Content-Length"=>"4"}, @body="dude">
+
+    >> puts last_response.body
+    dude
+
+    >> post '/create'
+    ...
+
+To see the full list of rack-test actions you can make
+
+    >> rack.actions
+    => [:request, :get, :post, :put, :delete, :head, :follow_redirect!, :header, :set_cookie,
+    :clear_cookies, :authorize, :basic_authorize, :digest_authorize, :last_response, :last_request]
+
 Tux also comes with commands to give you a good overview of your app
 
-    $ tux
     >> routes
     HEAD  "/"
     HEAD  /book/:id
@@ -74,6 +106,11 @@ Tux also comes with commands to give you a good overview of your app
     static              true
     views               "/my/path/views"
 
+== Configure
+
+Since tux is a {ripl shell}[http://github.com/cldwalker/ripl], tux is highly configurable. You can
+create tux commands in the format tux-COMMAND and enhance your shell by adding ripl plugins to
+~/.riplrc. Read {ripl's readme}[http://github.com/cldwalker/ripl#readme] for more.
+
 == TODO
-* Better integration with ripl-rack
 * Tests
